--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -10,9 +10,8 @@
             <i class="bx bx-chevron-left bx-sm align-middle"></i>
         </a>
     </div>
-
     <div class="menu-inner-shadow"></div>
-    <ul class="menu-inner py-1">
+    <ul class="menu-inner py-1 " style="padding-bottom:100px !important;">
         <!-- Dashboard -->
         <li th:class="${#strings.equals(session.active,'/dashboard')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/dashboard}" class="menu-link">
@@ -23,7 +22,7 @@
         <li th:class="${#strings.equals(session.active,'/statistic')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/statistic}" class="menu-link">
                 <i class=' menu-icon tf-icons bx bx-bar-chart-alt'></i>
-                <div >Statistic</div>
+                <div>Statistic</div>
             </a>
         </li>
 
@@ -76,7 +75,7 @@
         </li>
         <li th:class="${#strings.contains(session.active,'evaluate')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-user-circle"></i>
+                <i class="menu-icon tf-icons bx bx-comment-dots"></i>
                 <div data-i18n="Customer">Evaluate</div>
             </a>
             <ul class="menu-sub">
@@ -89,7 +88,7 @@
         </li>
         <li th:class="${#strings.contains(session.active,'voucher')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-user-circle"></i>
+                <i class="menu-icon tf-icons bx bxs-coupon"></i>
                 <div th:text="#{sidebar.voucher}"></div>
             </a>
             <ul class="menu-sub">
@@ -109,6 +108,35 @@
             <a th:href="@{/admin/blog}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-receipt"></i>
                 <div data-i18n="Blog">Blog</div>
+            </a>
+        </li>
+        <li class="menu-header small text-uppercase">
+            <span>Other</span>
+        </li>
+        <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class='menu-icon tf-icons bx bx-globe'></i>
+                <div th:text="#{lang.language}"></div>
+            </a>
+            <ul class="menu-sub">
+                <li class="menu-item">
+                    <a class="menu-link" href="?lang=vi">
+                        <span><img class="w-px-20" src="/image/vietnam.png"></span>
+                        <span class="align-middle" th:text="#{lang.vietnamese}"></span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="?lang=en">
+                        <span><img class="w-px-20" src="/image/english.png"></span>
+                        <span class="align-middle" th:text="#{lang.english}"></span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="menu-item">
+            <a class="menu-link" href="/login">
+                <i class="menu-icon tf-icons bx bx-power-off me-2"></i>
+                <span class="align-middle" th:text="#{navbar.logOut}"></span>
             </a>
         </li>
     </ul>
