--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
@@ -1,9 +1,9 @@
 <h4 class="fw-semibold py-3 mb-4"> Danh sách khách hàng </h4>
 
 <div class="mb-4">
-    <div class="mb-4">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#largeModal">
-            Thêm Voucher
+    <div class="row justify-content-end me-4">
+        <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+            <i class='tf-icon bx bx-plus-medical'></i> Add Customer
         </button>
     </div>
     <form th:action="@{/admin/customer/save}" method="post" th:object="${customer}" enctype="multipart/form-data">
