--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucherCustomer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucherCustomer.html
@@ -1,64 +1,77 @@
-<h4 class="fw-semibold py-3 mb-4"> Danh sách Voucher</h4>
+<h4 class="fw-semibold py-3 mb-4"> Danh sách VoucherCustomer</h4>
 <div class="mb-4">
     <form th:action="@{/admin/voucherCustomer/add}" method="post" th:object="${voucherCustomer}">
-        <div>
-            <div>
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Thông tin Voucher Customer</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="row col-lg-12 col-xl-9">
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Customer:</label>
-                                        <br>
-                                        <select th:field="*{customer}">
-                                            <option th:each="i:${session.listCustomer}" th:value="${i.id}" th:text="${i.name}"></option>
-                                        </select>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label class="form-label">Voucher:</label>
-                                        <br>
-                                        <select th:field="*{voucher}">
-                                            <option th:each="v:${session.listVoucher}" th:value="${v.id}" th:text="${v.code}"></option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Start Day:</label>
-                                        <input type="date" class="form-control" th:field="*{date_start}" name="date_start">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label class="form-label">Start Day:</label>
-                                        <input type="date" class="form-control" th:field="*{date_end}">
-                                    </div>
-                                </div>
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Active:</label>
-                                        <br>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" th:field="*{active}"
-                                                   th:value="true" checked>
-                                            <label class="form-check-label" >Acitve</label>
+        <div class="row justify-content-end me-4">
+            <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal"
+                    data-bs-target="#largeModal">
+                <i class='tf-icon bx bx-plus-medical'></i> Add VoucherCustomer
+            </button>
+        </div>
+        <div class="mb-4">
+            <div class="modal fade" th:id="largeModal" tabindex="-1"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Thông tin VoucherCustomer</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="row col-lg-12 col-xl-9">
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label class="form-label">Customer:</label>
+                                            <br>
+                                            <select th:name="customer">
+                                                <option th:each="i:${session.listCustomer}" th:value="${i.id}"
+                                                        th:text="${i.name}"></option>
+                                            </select>
                                         </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" th:field="*{active}"
-                                                   th:value="false">
-                                            <label class="form-check-label">Non-active</label>
+                                        <div class="mb-3">
+                                            <label class="form-label">Voucher:</label>
+                                            <br>
+                                            <select th:name="voucher">
+                                                <option th:each="v:${session.listVoucher}" th:value="${v.id}"
+                                                        th:text="${v.code}"></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label class="form-label">Start Day:</label>
+                                            <input type="date" class="form-control" th:name="dateStart"
+                                                   name="date_start">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Start Day:</label>
+                                            <input type="date" class="form-control" th:name="dateEnd">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4 col-lg-6 col-md-6">
+                                        <div class="mb-3">
+                                            <label class="form-label">Active:</label>
+                                            <br>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" th:name="active"
+                                                       th:value="true" checked>
+                                                <label class="form-check-label">Acitve</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" th:name="active"
+                                                       th:value="false">
+                                                <label class="form-check-label">Non-active</label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset
+                            </button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -92,7 +105,7 @@
         <div class="row">
             <div class="col-md-2 d-flex align-items-center">
                 <p>Voucher :
-<!--                    <span th:text="${#lists.size(listVoucherCustomer)}"></span>-->
+                    <!--                    <span th:text="${#lists.size(listVoucherCustomer)}"></span>-->
                 </p>
             </div>
             <div class="col-md-10 text-end">
@@ -120,21 +133,26 @@
                 </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
-                <tr th:each="voucher : ${listVoucherCustomer}">
+                <tr th:each="voucherCustomer : ${listVoucherCustomer}">
                     <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>1</strong></td>
-                    <td th:text="${voucher.customer.name}"></td>
-                    <td th:text="${voucher.voucher.code}"></td>
-                    <td th:text="${voucher.date_start}"></td>
-                    <td th:text="${voucher.date_end}"></td>
-                    <td>
-                        <span th:if="${voucher.active} == true" th:text="Active"/>
-                        <span th:if="${voucher.active} == false" th:text="ChưaActive"/>
+                    <td th:text="${voucherCustomer.customer.name}"></td>
+                    <td th:text="${voucherCustomer.voucher.code}"></td>
+                    <td th:text="${voucherCustomer.dateStart}"></td>
+                    <td th:text="${voucherCustomer.dateEnd}"></td>
+                    <td th:text="${voucherCustomer.active == true ? 'Active':'Inactive'}">
                     </td>
                     <td>
-                        <a class="btn btn-sm btn-primary"
-                           th:href="@{/admin/voucherCustomer/edit/{id_voucher}/{id_customer}(id_voucher=${voucher.voucher.id},id_customer=${voucher.customer.id})}">Edit</a>
-                        <a class="btn btn-sm btn-danger"
-                           th:href="@{/admin/voucherCustomer/delete/{id}(id=${voucher.customer.id})}">Delete</a>
+                        <a th:href="@{/admin/voucherCustomer/edit/{id}/{idCustomer}(idCustomer=${voucherCustomer.customer.id},id=${voucherCustomer.voucher.id})}">
+                            <button type="button" class="btn btn-primary btn-control">
+                                <span class="bx bxs-edit-alt"></span>
+                            </button>
+                        </a>
+                        <a th:href="@{/admin/voucherCustomer/delete/{id}(id=${voucherCustomer.customer.id})}"
+                           onclick="return confirm('Xác nhận xóa')">
+                            <button type="button" class="btn btn-icon btn-danger">
+                                <span class="bx bxs-trash"></span>
+                            </button>
+                        </a>
                     </td>
                 </tr>
                 </tbody>
