--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -42,7 +42,8 @@
                 <div th:text="#{sidebar.staff}">Staff</div>
             </a>
         </li>
-        <li th:class="${#strings.contains(session.active,'/bill')?'menu-item active open':'menu-item'}">
+        <!--        <li th:class="${#strings.contains(session.active,'/bill')?'menu-item active open':'menu-item'}">-->
+        <li>
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-receipt"></i>
                 <div th:text="#{sidebar.invoice}"></div>
@@ -60,20 +61,23 @@
                 </li>
             </ul>
         </li>
-        <li th:class="${#strings.contains(session.active,'customer')?'menu-item active open':'menu-item'}">
+        <!--        <li th:class="${#strings.contains(session.active,'customer')?'menu-item active open':'menu-item'}">-->
+        <li>
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-user-circle"></i>
                 <div th:text="#{sidebar.customer}"></div>
             </a>
             <ul class="menu-sub">
-                <li th:class="${#strings.equals(session.active,'/customer/list')?'menu-item active':'menu-item'}">
+                <!--                <li th:class="${#strings.equals(session.active,'/customer/list')?'menu-item active':'menu-item'}">-->
+                <li>
                     <a th:href="@{/admin/customer/list}" class="menu-link">
                         <div th:text="#{sidebar.listCustomer}"></div>
                     </a>
                 </li>
             </ul>
         </li>
-        <li th:class="${#strings.contains(session.active,'evaluate')?'menu-item active open':'menu-item'}">
+        <!--        <li th:class="${#strings.contains(session.active,'evaluate')?'menu-item active open':'menu-item'}">-->
+        <li>
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-comment-dots"></i>
                 <div data-i18n="Customer">Evaluate</div>
@@ -86,7 +90,8 @@
                 </li>
             </ul>
         </li>
-        <li th:class="${#strings.contains(session.active,'voucher')?'menu-item active open':'menu-item'}">
+        <li>
+            <!--        <li th:class="${#strings.contains(session.active,'voucher')?'menu-item active open':'menu-item'}">-->
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bxs-coupon"></i>
                 <div th:text="#{sidebar.voucher}"></div>
@@ -97,14 +102,16 @@
                         <div th:text="#{sidebar.listVoucher}"></div>
                     </a>
                 </li>
-                <li th:class="${#strings.equals(session.active,'/voucherCustomer')?'menu-item active':'menu-item'}">
+                <li>
+                    <!--                <li th:class="${#strings.equals(session.active,'/voucherCustomer')?'menu-item active':'menu-item'}">-->
                     <a th:href="@{/admin/voucherCustomer}" class="menu-link">
                         <div th:text="#{sidebar.listVoucherCustomer}">List voucher customer</div>
                     </a>
                 </li>
             </ul>
         </li>
-        <li th:class="${#strings.equals(session.active,'/blog')?'menu-item active':'menu-item'}">
+        <li>
+            <!--        <li th:class="${#strings.equals(session.active,'/blog')?'menu-item active':'menu-item'}">-->
             <a th:href="@{/admin/blog}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-receipt"></i>
                 <div data-i18n="Blog">Blog</div>
