--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
@@ -44,12 +44,12 @@
                                     <span class="col-4 text-end"> [(${billProduct.quantity})]</span>
                                 </div>
                                 <div class="row mb-4">
-                                    <span class="col-7 text-start"><b>Giá sản phẩm:</b></span>
-                                    <span class="col-5 text-end"> [(${#numbers.formatDecimal(billProduct.quantity * billProduct.price, 0,'COMMA',2,'POINT')})]<u>đ</u></span>
+                                    <span class="col-7 text-start"><b>Giá sản phẩm x[(${billProduct.quantity})]:</b></span>
+                                    <span class="col-5 text-end"> [(${#numbers.formatDecimal(billProduct.quantity * billProduct.price, 0,'COMMA',0,'POINT')})]<u>đ</u></span>
                                 </div>
                                 <div class="row mb-4">
-                                    <span class="col-7 text-start"><b>Giá sau khuyến mãi:</b></span>
-                                    <span class="col-5 text-end"> 9000000<u>đ</u></span>
+                                    <span class="col-7 text-start"><b>Giá khuyến mãi:</b></span>
+                                    <span class="col-5 text-end">[(${#numbers.formatDecimal(billProduct.quantity *billProduct.reducedMoney, 0,'COMMA',0,'POINT')})] <u>đ</u></span>
                                 </div>
                             </div>
                         </div>
@@ -81,14 +81,14 @@
                             <div class="row">
                                 <h4 class="fw-bold text-start col-6 col-md-6">Đơn từ web</h4>
                                 <div class="col-6 col-md-6 text-end">
-                                    <button class="btn btn-warning" type="button" id="btnEdit"
+                                    <button class="btn btn-outline-dark" type="button" id="btnEdit"
                                             name="editInfo">Chỉnh sửa
                                     </button>
-                                    <button class="btn btn-success" type="button" id="btnSave"
-                                            th:value="${deliveryNote.id}"
+                                    <button class="btn btn-outline-dark" type="button" id="btnSave"
+                                            th:value="${deliveryNote?.id}"
                                             name="editInfo">Lưu
                                     </button>
-                                    <button class="btn btn-dark" type="reset" id="btnCancel"
+                                    <button class="btn btn-outline-dark" type="reset" id="btnCancel"
                                             name="editInfo">Reset
                                     </button>
 
@@ -102,28 +102,28 @@
                                         <td><strong>Tên khách hàng:</strong>
                                         </td>
                                         <td>
-                                            <p id="nameText" th:text="${deliveryNote.received}"></p>
+                                            <p id="nameText" th:text="${deliveryNote?.received}"></p>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td><strong>SĐT khách hàng:</strong>
                                         </td>
                                         <td>
-                                            <p id="phoneText" th:text="${deliveryNote.receiverPhone}"></p>
+                                            <p id="phoneText" th:text="${deliveryNote?.receiverPhone}"></p>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td><strong>Email:</strong>
                                         </td>
                                         <td>
-                                            <p id="emailCustomerText" th:text="${deliveryNote.deliveryEmail}"></p></td>
+                                            <p id="emailCustomerText" th:text="${deliveryNote?.deliveryEmail}"></p></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Tên người nhận:</strong>
                                         </td>
                                         <td class="input-group">
                                             <input class="form-check form-control " type="text"
-                                                   th:value="${deliveryNote.deliver}" name="deliver"
+                                                   th:value="${deliveryNote?.deliver}" name="deliver"
                                                    id="deliver" disabled="true">
                                         </td>
                                     </tr>
@@ -132,7 +132,7 @@
                                         </td>
                                         <td class="input-group">
                                             <input class="form-check form-control " type="text"
-                                                   th:value="${deliveryNote.deliveryPhone}" name="deliveryPhone"
+                                                   th:value="${deliveryNote?.deliveryPhone}" name="deliveryPhone"
                                                    id="deliveryPhone" disabled="true">
                                         </td>
                                     </tr>
@@ -141,7 +141,7 @@
                                         </td>
                                         <td class="input-group">
                                             <input class="form-control" type="text"
-                                                   th:value="${deliveryNote.receivingAddress}" name="receivingAddress"
+                                                   th:value="${deliveryNote?.receivingAddress}" name="receivingAddress"
                                                    id="receivingAddress" disabled="true">
                                         </td>
                                     </tr>
@@ -151,7 +151,7 @@
                                         </td>
                                         <td class="input-group">
                                             <input class="form-check form-control " type="number"
-                                                   th:value="${#numbers.formatInteger(deliveryNote.deliveryFee,1)}"
+                                                   th:value="${#numbers.formatInteger(deliveryNote?.deliveryFee,1)}"
                                                    name="deliveryFee"
                                                    id="deliveryFee" disabled="true">
                                         </td>
@@ -160,7 +160,7 @@
                                         <td><strong>Ghi chú:</strong>
                                         </td>
                                         <td class="input-group"><input class="form-check form-control " type="text"
-                                                                       th:value="${deliveryNote.note}" name="note"
+                                                                       th:value="${deliveryNote?.note}" name="note"
                                                                        id="note" disabled="true">
                                         </td>
                                     </tr>
@@ -243,28 +243,9 @@
                     <div class="list-group list-group-flush">
                         <input th:value="${billDetail.billStatus.code}" id="codeStatus" style="display: none">
                         <select class="form-select list-group list-group-flush select2" id="billStatus" name="status">
-                            <option value="WP" th:selected="${'WP'== billDetail.billStatus.code}">Chờ xử lý
-                            </option>
-                            <option value="PG" th:selected="${'PG' == billDetail.billStatus.code}">Đang chuẩn bị
-                                hàng
-                            </option>
-                            <option value="OS" th:selected="${'OS' == billDetail.billStatus.code}">Hết hàng</option>
-                            <option value="DE" th:selected="${'DE' == billDetail.billStatus.code}">Đang giao hàng
-                            </option>
-                            <option value="DEE" th:selected="${'DEE' == billDetail.billStatus.code}">Lỗi giao hàng
-                            </option>
-                            <option value="CO" th:selected="${'CO' == billDetail.billStatus.code}">Đã hoàn thành
-                            </option>
-                            <option value="SC" th:selected="${'SC' == billDetail.billStatus.code}">Shop hủy</option>
-                            <option value="CC" th:selected="${'CC' == billDetail.billStatus.code}">Khách hủy
-                            </option>
-                            <option value="RR" th:selected="${'RR' == billDetail.billStatus.code}">Yêu cầu trả
-                                hàng
-                            </option>
-                            <option value="WR" th:selected="${'WR' == billDetail.billStatus.code}">Chờ trả hàng
-                            </option>
-                            <option value="RE" th:selected="${'RE' == billDetail.billStatus.code}">Đã trả hàng
-                            </option>
+                            <option th:each="bs :${billStatus}" th:value="${bs.code}" th:id="${bs.code}"
+                                    th:selected="${bs.code==billDetail.billStatus.code}"
+                                    th:text="${bs.status}"></option>
                         </select>
                     </div>
                 </div>
@@ -287,62 +268,65 @@
         </form>
         <div class="card">
             <div class="d-flex align-items-end row">
-                <div class="card-body">
+                <form th:action="@{/admin/bill/bill_detail/update_status/{id}(id=${billDetail.id})}" method="post" id="updatePay">
+                    <div class="card-body">
                     <span class="card-title mt-3 mb-3">
                          <b>Tổng tiền</b>
                     </span>
-                    <div class="mb-3 row">
-                        <hr>
-                        <div class="mb-2">
-                            <div class="row">
-                                <label class="col-5 col-md-5"><b class="text-start">Tổng gốc:</b></label>
-                                <span class="text-end col-7 col-md-7">1000000<u>đ</u></span>
+                        <div class="mb-3 row">
+                            <hr>
+                            <div class="mb-2">
+                                <div class="row">
+                                    <label class="col-5 col-md-5"><b class="text-start">Tổng gốc:</b></label>
+                                    <span class="text-end col-7 col-md-7">[(${#numbers.formatDecimal(totalPrice,0,'COMMA',0,'POINT')})]<u>đ</u></span>
+                                </div>
+                                <small class="col-12 col-md-12"
+                                       th:text="|(${#lists.size(billDetail.billProducts)} sản phẩm)|"></small>
                             </div>
-                            <small class="col-12 col-md-12"
-                                   th:text="|(${#lists.size(billDetail.billProducts)} sản phẩm)|"></small>
-                        </div>
-                        <div class="mb-2">
-                            <div class="row">
-                                <label class="col-6 col-md-6"><b class="text-start">Giảm giá:</b></label>
-                                <span class="text-end col-6 col-md-6">-1000000<u>đ</u></span>
+                            <div class="mb-2">
+                                <div class="row">
+                                    <label class="col-6 col-md-6"><b class="text-start">Giảm giá:</b></label>
+                                    <span class="text-end col-6 col-md-6">[(${#numbers.formatDecimal(totalReduceMoney,0,'COMMA',0,'POINT')})]<u>đ</u></span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="mb-2">
-                            <div class="row">
-                                <label class="col-6 col-md-6"><b class="text-start">Voucher:</b></label>
-                                <span class="text-end col-6 col-md-6">-1000000<u>đ</u></span>
+                            <div class="mb-2">
+                                <div class="row">
+                                    <label class="col-6 col-md-6"><b class="text-start">Voucher:</b></label>
+                                    <span class="text-end col-6 col-md-6">[(${billDetail?.voucher?.value != null ?  billDetail.voucher.value :'0'})]<u>đ</u></span>
+                                </div>
                             </div>
                         </div>
                         <hr>
                         <div class="mt-2 mb-2">
                             <div class="row">
                                 <label class="col-6 col-md-6"><b class="text-start">Tổng sau giảm:</b></label>
-                                <span class="text-end col-6 col-md-6">1000000<u>đ</u></span>
+                                <span class="text-end col-6 col-md-6">[(${#numbers.formatDecimal(totalAfter,0,'COMMA',0,'POINT')})]<u>đ</u></span>
                             </div>
                         </div>
                         <div class="mt-2 mb-2">
                             <label class="form-label"><b class="text-start">Ghi chú:</b></label>
-                            <textarea class="form-control"></textarea>
+                            <textarea class="form-control" th:value="${billDetail.note}" disabled></textarea>
                         </div>
                         <div class="col-md">
-                            <div class="form-check mt-3">
+                            <div class="form-check mt-3" th:each="pm : ${paymentMethod}">
                                 <input class="form-check-input" type="radio" name="paymentMethod"
-                                       id="inlineRadio1"
-                                       value="option1">
-                                <label class="form-check-label" for="inlineRadio1">Tiền mặt</label>
+                                       th:checked="${billDetail.paymentMethod.id==pm.id}"
+                                       th:id="${pm.id}"
+                                       th:value="${pm.id}" th:name="paymentMethod">
+                                <label class="form-check-label" th:for="${pm.id}" th:text="${pm.paymentMethod}"></label>
                             </div>
-                            <div class="form-check  mt-3">
-                                <input class="form-check-input" type="radio" name="paymentMethod"
-                                       id="inlineRadio2"
-                                       value="option2">
-                                <label class="form-check-label" for="inlineRadio2">Chuyển khoản Vnpay</label>
-                            </div>
+                            <!--                            <div class="form-check mt-3">-->
+                            <!--                                <input class="form-check-input" type="radio" name="paymentMethod" th:field="${billDetail.paymentMethod.code}"-->
+                            <!--                                       id="inlineRadio2"-->
+                            <!--                                       value="VNP">-->
+                            <!--                                <label class="form-check-label" for="inlineRadio2">Chuyển khoản Vnpay</label>-->
+                            <!--                            </div>-->
                         </div>
-                        <div class="col-12 text-center">
-                            <button class="btn btn-warning mt-4 ">Thanh toán</button>
+                        <div class="col-12 text-center" th:if="${billDetail.paymentStatus==2}">
+                            <button class="btn btn-warning mt-4" id="pay" type="submit" value="1" name="paymentStatus">Thanh toán</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
